Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-2898

Occasional crashes with bad data being returned by TSFetchRespGet

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • None
    • CPP API
    • None

    Description

      Sometimes on receiving a success event from TSFetchUrl, when the code calls TSFetchRespGet, it gets a NULL pointer/0 length. AsyncHttpFetch code then tries to use this resulting in a crash. There is an underlying problem, but the API shouldn't crash.

      Attachments

        Activity

          People

            manjeshnilange Manjesh Nilange
            manjeshnilange Manjesh Nilange
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: