TS-2898 Verifying TSFetchRespGet return value before using